--- a/Nanowhite.html
+++ b/Nanowhite.html
@@ -64,6 +64,65 @@
             </ul>
         </nav>
     </header>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_1">
+                <section class="widget-column">
+                    <ul class="menu">
+                        <li class="footer-widget">
+                            <h3>Address</h3>
+                            <a href="https://www.google.com/maps/place/Sri+Kanaka+Durga+Granite+%26+Nano+White/@17.49618,78.3669924,17z/data=!3m1!4b1!4m20!1m13!4m12!1m4!2m2!1d78.368655!2d17.4956461!4e1!1m6!1m2!1s0x3bcb93bc46f28d3f:0xecc1fed975d3197a!2sSri+Kanaka+Durga+Granite+%26+Nano+White!2m2!1d78.3695673!2d17.49618!3m5!1s0x3bcb93bc46f28d3f:0xecc1fed975d3197a!8m2!3d17.49618!4d78.3695673!16s%2Fg%2F11pgsz46hq?hl=en-GB&entry=ttu"
+                                target="_blank" rel="noopener">Gate No. 1, Metro pillar No. 615, Matrusri
+                                Nagar,<br>
+                                Miyapur, Hyderabad, Telangana 500049</a>
+                        </li>
+                        <li class="footer-widget">
+                            <h3>Phone</h3>
+                            <a href="tel:+919959849289">+91 9959849289</a>
+                        </li>
+                        <li class="footer-widget">
+                            <h3>Email</h3>
+                            <a href="mailto:srikanakadurgagranitez@gmail.com">srikanakadurgagranitez@gmail.com</a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <div class="footer_2">
+                <section class="widget-column">
+                    <ul class="menu">
+                        <li class="f">
+                            <h3>About Us</h3>
+                            <ul class="about-us-sec">
+                                <li><a href="#home">Company</a></li>
+                                <li><a href="#about-us">Customer Reviews</a></li>
+                                <li><a href="#blogs">Blogs</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <div class="footer_3">
+                <section class="widget-column">
+                    <ul class="menu">
+                        <li class="f2">
+                            <h3>Customer Support</h3>
+                            <ul>
+                                <li><a href="tel:+919494764896">Get Quote</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+    </footer>
+    <footer class="bottom">
+        <div class="footer_bottom">
+            <div class="container">
+                <p>&copy; 2021 Sri Kanaka Durga Granites and Nano White. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
