--- a/index.html
+++ b/index.html
@@ -23,35 +23,34 @@
         <nav class="navbar">
             <ul class="navbar-list">
                 <li class="navbar-item">
-                    <a href="#home" class="navbar-link">Home</a>
+                    <a href="index.html" class="navbar-link">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#about-us" class="navbar-link">About Us
+                    <a href="About_us.html" class="navbar-link">About Us
                         <img class="down-arrow" src="./assests/downarrow.png" alt="down-arrow">
                     </a>
                     <ul class="sub-menu">
                         <li class="sub-menu-item">
-                            <a href="#about-us" class="sub-menu-link">Company</a>
+                            <a href="#Company" class="sub-menu-link">Company</a>
                         </li>
                         <li class="sub-menu-item">
-                            <a href="#reviews" class="sub-menu-link">Customer Reviews</a>
+                            <a href="#Customer_reviews" class="sub-menu-link">Customer Reviews</a>
                         </li>
                     </ul>
-
                 </li>
                 <li class="navbar-item">
-                    <a href="#products" class="navbar-link">Products
+                    <a href="#product" class="navbar-link">Products
                         <img class="down-arrow" src="./assests/downarrow.png" alt="down-arrow">
                     </a>
                     <ul class="sub-menu">
                         <li class="sub-menu-item">
-                            <a href="#about-us" class="sub-menu-link">Natural Granites</a>
+                            <a href="natural_granites.html" class="sub-menu-link">Natural Granites</a>
                         </li>
                         <li class="sub-menu-item">
-                            <a href="#reviews" class="sub-menu-link">Artificial Granites</a>
+                            <a href="artificial_granites.html" class="sub-menu-link">Artificial Granites</a>
                         </li>
                         <li class="sub-menu-item">
-                            <a href="#reviews" class="sub-menu-link">Nano White</a>
+                            <a href="Nanowhite.html" class="sub-menu-link">Nano White</a>
                         </li>
                     </ul>
                 </li>
@@ -70,8 +69,6 @@
 
     <main>
         <article>
-
-            <!-- need to edit this below section like adding cover-->
             <section class="section_1" id="home">
                 <div class="cover">
                     <img src="./assests/cover1 .png" alt="cover">
@@ -79,9 +76,9 @@
                         <h1>
                             BEAUTY, INNOVATION, PRRFECTION
                         </h1>
-                        <p>Natural Granite, Nano White,
+                        <h2>Natural Granite, Nano White,
                             <br>and Artificial Granite
-                        </p>
+                        </h2>
                         <button class="quote-button"><a href="tel:+919494764896">Get Quote</a></button>
                     </div>
                 </div>
